advisor/kube/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: advisor
  labels:
    app: advisor
spec:
  replicas: 1
  selector:
    matchLabels:
      app: advisor
  template:
    metadata:
      labels:
        app: advisor
    spec:
      containers:
      - name: advisor
        image: localhost:5000/advisor:latest
        ports:
        - containerPort: 8080
        resources:
          requests:
            cpu: "100m"
          # limits:
          #   memory: "64Mi"
          #   cpu: "100m"
