advisor/kube/service.yml
kind: Service
apiVersion: v1
metadata:
  name: advisor
spec:
  selector:
    app: advisor
  ports:
  - port: 8080
    targetPort: 8080
    protocol: TCP
    name: http
  clusterIP: None
