advisor/kube/ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: advisor
  annotations:
    kubernetes.io/ingress.class: traefik
spec:
  rules:
  - host: advisor.minikube
    http:
      paths:
      - backend:
          serviceName: advisor
          servicePort: 8080
